feat: update bangumis up to 20240513

--- a/pages/2020/2/追过的番.md
+++ b/pages/2020/2/追过的番.md
@@ -142,6 +142,7 @@ type: page
   - ✅ [我的青春恋爱物语果然有问题。 续](https://www.bilibili.com/bangumi/media/md1540)
   - ✅ [我的青春恋爱物语果然有问题 续 OVA](https://www.bilibili.com/bangumi/media/md5622)
   - ✅ [我的青春恋爱物语果然有问题。完](https://www.bilibili.com/bangumi/media/md28228386)
+  - ✅ 我的青春恋爱物语果然有问题 完 OVA
 - 夏目友人帐
   - ❌ [夏目友人帐](https://www.bilibili.com/bangumi/media/md1660)
   - ❌ [续 夏目友人帐](https://www.bilibili.com/bangumi/media/md1661)
@@ -282,23 +283,27 @@ type: page
 - ✅ [女高中生的虚度日常](https://www.bilibili.com/bangumi/media/md28221415)
 - 轻音少女
   - ✅ [轻音少女 第一季](https://www.bilibili.com/bangumi/media/md28220978)
+  - ✅ [うらおん!](https://bgm.tv/subject/31525)
   - ✅ [轻音少女 第二季](https://www.bilibili.com/bangumi/media/md28220984)
   - ✅ [轻音少女 剧场版](https://www.bilibili.com/bangumi/media/md28220988)
 - Ｄｒ．ＳＴＯＮＥ 石纪元
   - ✅ [Ｄｒ．ＳＴＯＮＥ 石纪元](https://www.bilibili.com/bangumi/media/md28221387)
   - ✅ [Ｄｒ．ＳＴＯＮＥ 新石纪](https://www.bilibili.com/bangumi/media/md28231817/)
   - ✅ [Ｄｒ．ＳＴＯＮＥ 龍水](https://bgm.tv/subject/331479)
+  - ✅ [新石纪 NEW WORLD](https://bgm.tv/subject/363101)
+  - ✅ [新石纪 NEW WORLD 第2部分](https://bgm.tv/subject/424372)
 - ✅ [烟花](https://www.bilibili.com/bangumi/media/md28227648) 回程飞机上看的，ummm但是不能称作入宅作吧。
 - ✅ [声之形](https://www.bilibili.com/bangumi/media/md12116)
 - 吹响吧！上低音号
   - ✅ [吹响吧！上低音号](https://www.bilibili.com/bangumi/media/md1547)
-  - ✅ [吹响吧！上低音号 第二季](https://www.bilibili.com/bangumi/media/md28223434)
   - ✅ [吹响吧！上低音号～欢迎来到北宇治高中吹奏乐部～](https://www.bilibili.com/bangumi/media/md28223435)
+  - ✅ [吹响吧！上低音号 第一季 SP 吹奏部的日常](https://www.bilibili.com/bangumi/media/md3470)
+  - ✅ [吹响吧！上低音号 第二季](https://www.bilibili.com/bangumi/media/md28223434)
   - ✅ [吹响吧！上低音号～想要传达的旋律～](https://www.bilibili.com/bangumi/media/md28223447)
+  - ✅ [吹响吧！上低音号 第二季 SP](https://www.bilibili.com/video/av78403377)
   - ✅ 利兹与青鸟 (山田尚子是神！)
   - ✅ [吹响吧！上低音号～誓言的终章～](https://www.bilibili.com/bangumi/media/md28223448)
-  - ✅ [吹响吧！上低音号 第一季 SP 吹奏部的日常](https://www.bilibili.com/bangumi/media/md3470)
-  - ✅ [吹响吧！上低音号 第二季 SP (TV未放送)](https://www.bilibili.com/video/av78403377)
+  - ✅ 特别篇 吹响！悠风号～合奏比赛～
 - 在盛夏等待
   - ✅ [在盛夏等待](https://www.bilibili.com/bangumi/media/md814)
   - ✅ [在盛夏等待 特别篇](https://www.bilibili.com/bangumi/media/md3837)
@@ -315,8 +320,11 @@ type: page
   - ✅ [鬼灭之刃 无限列车篇](https://bgm.tv/subject/350764)
     - ✅ [剧场版 鬼灭之刃 无限列车篇](https://bgm.tv/subject/291494)
   - ✅ [鬼灭之刃 游郭篇](https://bgm.tv/subject/328195)
+  - ✅ 鬼灭之刃 刀匠村篇
 - ❌ [黑色四叶草](https://www.bilibili.com/bangumi/media/md6422/)
-- ✅ [因为太怕痛就全点防御力了](https://www.bilibili.com/bangumi/media/md28224137/)
+- 因为太怕痛就全点防御力了
+  - ✅ [因为太怕痛就全点防御力了](https://www.bilibili.com/bangumi/media/md28224137/)
+  - ✅ 因为太怕痛就全点防御力了。2
 - ❌ [异度侵入 ID:INVADED](https://www.bilibili.com/bangumi/media/md28224080)
 - 虚构推理
   - ✅ [虚构推理](https://www.bilibili.com/bangumi/media/md28224145/)
@@ -450,6 +458,7 @@ type: page
   - ✅ 为美好的世界献上祝福！第二季
   - ✅ 为美好的世界献上祝福！第二季 OVA
   - ✅ 为美好的世界献上祝福！红传说
+  - ✅ 为美好的世界献上爆焰！
 - ✅ [URARA迷路帖](https://www.bilibili.com/bangumi/media/md5776)
 - ✅ [超人高中生们即便在异世界也能从容生存！](https://www.bilibili.com/bangumi/media/md28222745)
 - ✅ [恋爱研究所](https://www.bilibili.com/bangumi/media/md451)
@@ -463,7 +472,11 @@ type: page
 - ✅ [Overflow](http://bgm.tv/subject/295001) おーばーふろぉ
 - ✅ [终将成为你](https://www.bilibili.com/bangumi/media/md138832/)
 - ✅ [在魔王城说晚安](https://www.bilibili.com/bangumi/media/md28229876/)
-- ✅ [总之就是非常可爱](https://www.bilibili.com/bangumi/media/md28229676/)
+- 总之就是非常可爱
+  - ✅ [总之就是非常可爱](https://www.bilibili.com/bangumi/media/md28229676/)
+  - ✅ [总之就是非常可爱 ～SNS～](https://bgm.tv/subject/322899)
+  - ✅ [总之就是非常可爱 ～制服～](https://bgm.tv/subject/376708)
+  - ✅ [总之就是非常可爱 第二季](https://bgm.tv/subject/355798)
 - ✅ [魔女之旅](https://www.bilibili.com/bangumi/media/md28229881/)
 - ✅ [骚动时节的少女们啊](http://bgm.tv/subject/268070)
 - ✅ [成神之日](https://www.bilibili.com/bangumi/media/md28229870/)
@@ -487,13 +500,17 @@ type: page
   - ✅ [赤发白雪姬 第一季](https://www.bilibili.com/bangumi/media/md2578)
   - ✅ [赤发白雪姬 第二季](https://www.bilibili.com/bangumi/media/md3107)
   - ✅ [赤发白雪姬 OVA 不值一提的宝物、这一页](https://www.bilibili.com/bangumi/media/md3447)
-- ✅ [弱势角色友崎君](https://www.bilibili.com/bangumi/media/md28231807)
+- 弱势角色友崎君
+  - ✅ [弱势角色友崎君](https://www.bilibili.com/bangumi/media/md28231807)
+  - ✅ 弱角友崎同学 2nd STAGE 
 - ✅ [比宇宙更远的地方](https://www.bilibili.com/bangumi/media/md13032)
 - ✅ [偶像荣耀/IDOLY PRIDE](https://www.bilibili.com/bangumi/media/md28231933/)
 - ✅ [怪病医拉姆尼](https://www.bilibili.com/bangumi/media/md28231929/)
 - 无职转生 ～在异世界认真地活下去～
   - ✅ [无职转生 ～在异世界认真地活下去～](http://bgm.tv/subject/277554)
-  - ✅ [无职转生 ～在异世界认真地活下去～ 第二季](https://bgm.tv/subject/325585)
+  - ✅ [无职转生 ～在异世界认真地活下去～ 第2部分](https://bgm.tv/subject/325585)
+  - ✅ 无职转生Ⅱ ～到了异世界就拿出真本事～
+  - ❌ 无职转生Ⅱ ～到了异世界就拿出真本事～ 第2部分
 - ReLIFE
   - ✅ [ReLIFE](https://www.bilibili.com/bangumi/media/md28229193/)
   - ✅ [ReLIFE 完结篇](https://www.bilibili.com/bangumi/media/md79372)
@@ -501,7 +518,9 @@ type: page
   - ✅ [奇蛋物语 / WONDER EGG PRIORITY](https://www.bilibili.com/bangumi/media/md28231851) (需要境外调查)
   - ❌ [奇蛋物语 特别篇](https://bgm.tv/subject/331935)
 - ✅ [怪物事变](https://www.bilibili.com/bangumi/media/md28231884)
-- ✅ [堀与宫村](https://www.bilibili.com/bangumi/media/md28231840/)
+- 堀与宫村
+  - ✅ [堀与宫村](https://www.bilibili.com/bangumi/media/md28231840/)
+  - ✅ 堀与宫村 -piece-
 - ✅ [无限滑板 / SK8 the Infinity](https://www.bilibili.com/bangumi/media/md28231854/)
 - ✅ [回复术士的重启人生](http://bgm.tv/subject/295017)
 - ✅ [背徳の境界](http://bgm.tv/subject/326875)
@@ -512,7 +531,9 @@ type: page
 - ✅ [如果烧陶的话也做个马克杯吧](https://bgm.tv/subject/311615)
 - ✅ [转生成蜘蛛又怎样！](https://bgm.tv/subject/252782)
 - ✅ [打了三百年的史莱姆，不知不觉就练到了满等](https://bgm.tv/subject/292969)
-- ✅ [圣女的魔力是万能的](https://bgm.tv/subject/314518)
+- 圣女的魔力是万能的
+  - ✅ [圣女的魔力是万能的](https://bgm.tv/subject/314518)
+  - ✅ 圣女的魔力是万能的 第二季
 - ❌ [Vivy -Fluorite Eye's Song-](https://bgm.tv/subject/325286)
 - 普通女高中生要做当地偶像
   - ✅ [普通女高中生要做当地偶像](https://bgm.tv/subject/94236)
@@ -529,7 +550,9 @@ type: page
 - 只要可爱即使是变态你也会喜欢我吧？
   - ✅ [只要可爱即使是变态你也会喜欢我吧？](https://bgm.tv/subject/275371)
   - ✅ [変好き▽](https://bgm.tv/subject/286237)
-- ✅ [女友成双](https://bgm.tv/subject/319513)
+- 女友成双
+  - ✅ [女友成双](https://bgm.tv/subject/319513)
+  - ✅ 女友成双 第二季
 - ✅ [侦探已经死了。](https://bgm.tv/subject/325727)
 - 如果有妹妹就好了
   - ✅ [如果有妹妹就好了](https://bgm.tv/subject/213076)
@@ -620,6 +643,7 @@ type: page
 - SPY×FAMILY
   - ✅ [SPY×FAMILY](https://bgm.tv/subject/329906)
   - ✅ [SPY×FAMILY 第2クール](https://bgm.tv/subject/373267)
+  - ✅ SPY×FAMILY Season 2
 - BIRDIE WING -Golf Girls’ Story-
   - ✅ [BIRDIE WING -Golf Girls’ Story-](https://bgm.tv/subject/354682)
 - ✅ [CUE!](https://bgm.tv/subject/318227)
@@ -660,6 +684,54 @@ type: page
 - ✅ [智酱是女生！](https://bgm.tv/subject/390618)
 - ✅ [傲娇恶役大小姐莉泽洛特与实况转播远藤君和解说员小林](https://bgm.tv/subject/363308)
 - ✅ [最强阴阳师的异世界转生记](https://bgm.tv/subject/366507)
+- 想要成为影之实力者！
+  - ✅ [想要成为影之实力者！](https://bgm.tv/subject/329114)
+  - ❌ [影实！(かげじつ！)](https://bgm.tv/subject/406197)
+  - ❌ [想要成为影之实力者！ 第二季](https://bgm.tv/subject/419846)
+- ✅ [180秒能让你的耳朵幸福吗？](https://bgm.tv/subject/334495)
+- ✅ 【我推的孩子】
+- ✅ 我的百合乃工作是也！
+- ✅ 天国大魔境
+- ✅ 放学后失眠的你
+- ✅ 无神世界的神明活动
+- 物理魔法使马修
+  - ✅ 物理魔法使马修
+  - ❌ 物理魔法使马修 神觉者候补选拔试验篇
+- ✅ Do It Yourself!! -どぅー・いっと・ゆあせるふ-
+- ✅ 转生贵族的异世界冒险录 〜不知自重的诸神的使徒〜
+- ✅ 我的师傅没有尾巴
+- ✅ 谎言游戏
+- ✅ 满怀美梦的少年是现实主义者
+- ✅ 甜点转生
+- 我的幸福婚姻
+  - ✅ 我的幸福婚姻
+  - ✅ 我幸福的形式 (OVA)
+- ✅ 其实，我是最强的？
+- ✅ BanG Dream! It's MyGO!!!!!
+- ✅ 白圣女与黑牧师
+- ✅ 捡走被人悔婚的千金，教会她坏坏的幸福生活
+- ✅ 家里蹲吸血姬的苦闷
+- ✅ 超超超超超喜欢你的100个女朋友
+- 我心里危险的东西
+  - ✅ 我心里危险的东西
+  - ✅ 我心里危险的东西 推糟短篇
+  - ✅ 我心里危险的东西 第二季
+- 葬送的芙莉莲
+  - ✅ 葬送的芙莉莲
+  - ❌ 葬送的芙莉莲 ～●●的魔法～
+- ✅ 公主大人“拷问”的时间到了
+- ✅ 外科医生爱丽丝
+- ✅ 反派大小姐等级99～我是隐藏BOSS但不是魔王～
+- 药屋少女的呢喃
+  - ✅ 药屋少女的呢喃
+  - ❌ 猫猫的呢喃
+- ✅ 愚蠢天使与恶魔共舞
+- ✅ 我独自升级
+- ✅ 最弱的驯养师开启的捡垃圾的旅途。
+- ✅ 治愈魔法的错误使用方法
+- ✅ 北海道辣妹贼拉可爱
+- ✅ 16bit的感动 ANOTHER LAYER
+- ✅ 公司的小小前辈
 
 # 里
 
@@ -681,6 +753,7 @@ type: page
 - [ツグナヒ](https://bgm.tv/subject/376147)
   - ✅ [高飛車お姫様・瑠璃子～はじまりの痴激～](https://www.hacg.cat/wp/92910.html)
   - ナマイキスポ女・ナツキ〜屈辱の恥辱♥〜
+- ✅ [悶えてよ、アダムくん](https://bgm.tv/subject/469072)
 
 # Galgame
 
@@ -806,6 +879,7 @@ type: page
 # 日剧
 
 - ✅ [非自然死亡](https://bgm.tv/subject/225581)
+- ✅ 机动搜查队404
 - 半泽直树
   - ✅ [半泽直树](https://bgm.tv/subject/73955)
   - ❌ [半泽直树年纪念 第0章～被瞄准的半泽直树的密码～](https://bgm.tv/subject/294323)
